--- a/tuesday_pm_functional.Rmd
+++ b/tuesday_pm_functional.Rmd
@@ -5,15 +5,139 @@ date: "June 21, 2016"
 output: html_document
 ---
 # Objectives
-Start by putting up objectives/tasks that students will be working though:
+
 1. Import a raster — A lidar canopy height model (lidar/Teak_lidarCHM.tif)
+
 1. For the CHM, set values == 0 to NA (not trees)
+
 1. Classify the raster according to some distribution – low medium and tall trees. This could be done using a histogram potentially or we could just decide that <2m  is generally grasses / understory, <6m small trees,and the rest are tall trees. A function could import the desired thresholds. Visualize histogram/density and      plot vertical cutoff lines.
+
 1. Take the chm and create a hillshade (http://neon-workwithdata.github.io/neon-data-institute-2016/R/create-hillshade-R/)
+
 1. PLOT - layer the classified raster on top of the hillshade, add a legend for   each “class” - legends are super tricky to simplifying this process with a function would be good.  see: http://neon-workwithdata.github.io/neon-data-institute-2016/R/classify-by-threshold-R/  for my take on forcing a legend outside of the plot area using par settings. You may have other better forms of magic to make this work well. :)
+
 1. Export the plot figure to a pdf – publishable
+
 1. Export the classified raster as a geotiff with NaFlagg = -9999 to an outputs folder.
-```{r }
+
+## Load libraries
+
+``` {r load libraries}
+
+library(raster)
+library(rhdf5)
+library(rgdal)
+```
+
+## Import a raster — A lidar canopy height model
+
+```{r import_raster}
+
+canopy_hm <- raster("../NEONdata/D17-California/TEAK/2013/lidar/TEAK_lidarCHM.tif")
+
+plot(canopy_hm)
+
+```
+
+## Get rid of zeros canopy height values
+
+``` {r change_zeros}
+
+canopy_hm[canopy_hm==0] <- NA
+
+plot(canopy_hm,
+     main = "Canopy Height Model for Teakettle")
+
+```
+
+## Define Classification Scheme 
+
+``` {r define_classif}
+
+# first check the distribution of tree height measurements to aid in choosing 
+#     height bins for classification
+
+hist(canopy_hm)
+
+# Create matrix to define the height bins
+# class 1 is low vegetation
+# class 2 is medium vegetation
+# class 3 is high vegetation
+
+class.m <- c(0,3,1,
+             1,6,2,
+             5,60,3)
+
+class.m
+
+# change the class array into a matrix
+
+class.matrix <- matrix(class.m,
+                       ncol=3,
+                       byrow=TRUE)
+
+class.matrix
+```
+
+## Classify raster using tree heights
+
+``` {r classify_raster}
+
+# classify the raster using the scheme from previous code
+chm.class <- reclassify(canopy_hm,
+                        class.matrix)
+plot(chm.class)
+
+density(canopy_hm,
+        main = "Canopy heights at Teakettle site",
+        xlab = "height (m)")
+
+abline(v=class.matrix[,2], col="red")
+
+# Export PDF
+
+pdf(file = "Teak_CHM_denisty_with_breaks.pdf",width=6,height=7)
+```
+
+## Clean up the figure
+
+``` {r figure_options}
+
+# change margins of the plotting space
+# xpd = FALSE means do not plot outside bounds
+par(xpd = FALSE, mar=c(5.1, 4.1, 4.1, 4.5))
+
+# plot reclassified raster with new margins and set up color scheme
+plot(chm.class,
+     col=c("brown","yellow","green"), 
+     main="Tree Heights for Teakettle",
+     legend=F)
+
+# allow legend to plot outside of bounds
+par(xpd=TRUE)
+
+leg.x <-par()$usr[2]+20
+leg.y <- par()$usr[4] + 50 -(abs(par()$usr[3]-par()$usr[4])/2)
+
+# create the legend
+legend(leg.x, leg.y,  # set x,y legend location
+       legend = c("Low Vegetation", "Medium Vegetation","High Vegetation"),
+       fill = c("brown","yellow","green"),
+       bty="n") # turn off border
+
+```
+
+# Export Geotiff
+
+``` {r export_raster}
+
+
+writeRaster(chm.class,
+            filename="../outputs/TEAK/Teak_Classified_CHM.tif",
+            format="GTiff",
+            options="COMPRESS=LZW",
+            overwrite = TRUE,
+            NAflag = -9999)
 
 ```
 
